	Fixes the xdvipdfmx-bkm test.
	* dvi.c (dvi_locate_native_font): fix loading files without absolute
	paths.
	* dvi.c (dvi_locate_native_font): fix loading TTC fonts.
	* xdvipdfm-ttc.test, tests/ttc.dvi, tests/ttc.tex, tests/test.ttc,
	Makefile.am: new test.
	* dvi.c (dvi_locate_native_font): correctly load vertical glyph
	metrics.

2015-02-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Read glyph advances without the need for FreeType, based on
	patch by Clerk Ma.
	* fontmap.c, fontmap.h: Stop loading FreeType fonts.

2015-02-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: Fix jpeg_get_density().

2015-01-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bmpimage.c, dpxcrypt.c, dvi.c: Avoid compiler warnings.

2015-01-07  Khaled Hosny  <khaledhosny@eglug.org>

	* pdfdev.c (pdf_dev_reset_fonts): don't reset text_state.bold_param
	unless called for a new page, otherwise we "forget" that the last font
	was a fake bold font and don't reset text stroke when this function
	gets called immediatly after a fake bold font is used
	(https://sourceforge.net/p/xetex/bugs/105/).
	* pdfdev.h, pdfdoc.c, pdfdraw.c, spc_xtx.c: adapt.

2014-12-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Support to specify a page in a multi-page PDF to extract
	bounding box, usage: extractbb -p page foo.pdf.

2014-12-01  Karl Berry  <karl@tug.org>

	* data/dvipdfmx.cfg (D): add back -sPAPERSIZE=a0, needed for
	pstricks under xetex; retain -dEPSCROP, needed for negative llx/lly.
	From Akira, thread at
        http://tug.org/pipermail/xetex/2014-November/025664.html.

2014-11-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.test, xdvipdfmx.test: Also test --showpaper option.	

2014-11-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c, dpxconf.c, dpxconf.h: Add an option --showpaper which
	shows available paper formats and exits.

2014-11-29  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (show_usage): use [all pages] instead of (-).
	From peb.
